--- a/style.css
+++ b/style.css
@@ -6,3 +6,15 @@ h1 {
     color: white;
     text-align: center;
 }
+a:link {
+    color: greenyellow;
+}
+a:visited {
+    color: yellowgreen;
+}
+a:hover {
+    color: green;
+}
+a:active {
+    color: darkgreen;
+}
